# rust-bitvmx-zk-proof

./: .gitignore  Cargo.toml  README.md  image_id.json  risc0_cuda_linux_setup.sh  snark-seal.json
cli_serde/: Cargo.toml
cli_serde/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/guest_sample/: Cargo.toml
methods/guest_sample/src/: main.rs
verifier/: Cargo.toml
verifier/src/: cli.rs  format.rs  lib.rs  main.rs
verifier2/: Cargo.toml
verifier2/src/: main.rs
zk-result/: Cargo.toml
zk-result/src/: lib.rs
