[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.5", features = ["prove"] }
#risc0-groth16 = { version = "1.0.5", features = ["prove"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3"
hex = "0.4"
clap = { version = "4.5.8", features = ["derive"] }
json = "0.12.4"
cli_serde = { path = "../cli_serde" }