[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "2.0.1", features = ["prove"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
clap = { version = "4.5.8", features = ["derive"] }
json = "0.12.4"
zk-result = { path = "../zk-result" }