[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-groth16 = "1.0.5"
risc0-zkvm = { version = "1.0.5" }
risc0-zkp = { version = "1.0.5" }
bincode = "1.3"
hex = "0.4"
clap = { version = "4.5.8", features = ["derive"] }
json = "0.12.4"
sha2 = "0.10.8"
ark-groth16 = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4" }
ark-serialize = "0.4"
num-bigint = "0.4.6"